Bug 818231 - Unmask ion compiler from baseline compiler. r=jandem